src/test/ui/nll/relate_tys/fn-subtype.stderr
error[E0308]: mismatched types
  --> $DIR/fn-subtype.rs:9:33
   |
LL |     let y: for<'a> fn(&'a ()) = x;
   |                                 ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a ())`
              found fn pointer `fn(&())`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
